# zero-harm-ai-detectors

./: CHANGELOG.md  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml  trigger-backend-deploy.yml
detectors/: __init__.py  detectors.py  harmful._detectors.py
examples/: ai_mode_example.py  basic_usage.py  github_app_example.py  regex_detectors_example.py  regex_mode_example.py
scripts/: bump_version.py
tests/: test_ai_detectors.py  test_core_and_regex.py  test_core_patterns.py  test_detectors.py  test_input_validation.py  test_regex_detectors.py
zero_harm_ai_detectors/: __init__.py  _version.py  ai_detectors.py  core_patterns.py  harmful_detectors.py  input_validation.py  regex_detectors.py  regex_harmful_detectors.py
