[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-harm-ai-detectors"
dynamic = ["version"]
description = "Privacy and harmful content detection library"
authors = [
    {name = "Zero Harm AI LLC", email = "info@zeroharmai.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "regex>=2022.1.18",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors"
Repository = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors"
Issues = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors/issues"

[tool.setuptools.dynamic]
version = {attr = "zero_harm_detectors.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["zero_harm_detectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]