[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zero_harm_ai_detectors"
dynamic = ["version"]
description = "AI-powered privacy and harmful content detection library with freemium tiers"
authors = [
    {name = "Zero Harm AI LLC", email = "info@zeroharmai.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["pii", "privacy", "security", "ai", "detection", "harmful-content", "secrets"]

dependencies = [
    "regex>=2022.1.18",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

all = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors"
Repository = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors"
Documentation = "https://zeroharmai.com/docs"
Issues = "https://github.com/Zero-Harm-AI-LLC/zero-harm-ai-detectors/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zero_harm_ai_detectors*"]

[tool.setuptools_scm]
write_to = "zero_harm_ai_detectors/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=zero_harm_ai_detectors --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
