[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zero_harm_ai_detectors"
dynamic = ["version"]
description = "Privacy & content safety detection with regex and AI modes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zero Harm AI", email = "contact@zeroharm.ai"}
]
keywords = ["pii", "privacy", "detection", "secrets", "security", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "regex>=2022.1.18",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece",
    "protobuf",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zeroharm-ai/zero-harm-ai-detectors"
Documentation = "https://zeroharm.ai/docs"
Repository = "https://github.com/zeroharm-ai/zero-harm-ai-detectors"

[tool.setuptools_scm]
write_to = "zero_harm_ai_detectors/_version.py"
fallback_version = "0.3.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["zero_harm_ai_detectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=zero_harm_ai_detectors --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
